@@ -1014,6 +1014,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
   mySQL user to use, which clears up bug 921 et al. Minor changes to installer.
 * Fix problem reported on mailing list where re-initialising stats didn't work (can't insert
   duplicate rows with the same id field)
+* (bug 1122) gray out 'older revision' when viewing first article revision.
 
 === Caveats ===
 
